

encrypt - XXXX.YY                                           zzz yyy XXXX
-----------------

### New For Latest Release

* Automatic error correction of encrypted container format

### Fixed For Latest Release

* UNIX
  - Infinite loop on decryption attempt of unrecognised version
* Android
  - Fix compatibility menu bug
  - Change Android tray icon to black & white


encrypt - 2015.01                                           4th Jan 2015
-----------------

### New For This Release

* No header information
  - If you don’t keep the header, you MUST remember which algorithms and
    mode you used to encrypt the data!
  - This feature is so that if you choose to encrypt your data and then
    hide it in an image (steganography) if you’re coerced to extract it
    will still looks like random pixel data
  - Will keep going even if decryption cannot be verified (until an out
    of memory error - or similar - occurs!)
* Random IV’s (not derived from key)
* Build Slackware package for easy installation
* On Android, display notification of progress
* Store filename even when encrypting a single file

### Fixed For This Release

* Figure out why the Android app doesn’t like Windows encrypted files
  - It wasn’t actually due to Windows, but a subtle bug in the Android
    code
* Fix bug caused by no rc file
* Plugged some memory leaks
* Better support for en/decrypting from/to a directory


encrypt - 2014.06                                         20th July 2014
-----------------

There’s been a lot of (small) changes for this release. Perhaps the most
significant update is the ability to select the cipher mode (the default
was CBC). The most obvious update to the Windows build is the GUI is now
GTK+3 instead of GTK+2, the other major change for Windows is the use of
the latest version of libgcrypt (now inline with GNU/Linux and OS X).

Speaking of OS X, I think that the libgcrypt issue there has been fixed.