@@ -51,6 +51,10 @@ Changelog
 * Android
   - Fix compatibility menu bug
   - Change Android tray icon to black & white
+* Windows
+  - Workaround for the AES/Rijndael issue; instead of using the DLL from
+    http://lrn.no-ip.info we now use the DLL included as part of the
+    Gpg4win project
 
 
 TODO
@@ -68,6 +72,3 @@ TODO
 
 * Fix SIGSEGV if the source file is deleted (even while doing nothing)
   (GTK file selection dialog - GNU/Linux)
-* On Windows 8: AES is unavailable as there is a bug in libgcrypt. As
-  and when this issue is fixed upstream, we’ll provide a fix too. This
-  does not affect Windows 7. (Check if 1.6.3 fixes this issue.)
